[package]
name = "summit"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
game = { path = "../game" }
# Pin the version, including raylib-sys becasue as of this writing, the raylib
# packages do not follow semver.
raylib = "= 3.7.0"
raylib-sys = "= 3.7.0"

[features]
default = []
